<resources>
    <string name="app_name">BetterFit</string>
    <string name="stat_btn">START</string>
    <string name="close">CLOSE</string>
    <string name="tutorial_video">Tutorial Video</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_goal">Select Goal</string>
    <string name="select_wisely">Select Wisely</string>
    <string name="maintain">Maintain</string>
    <string name="mild_lose">Mild loss</string>
    <string name="weight_lose">Weight loss</string>
    <string name="extreme_lose">Extreme loss</string>
    <string name="mild_gain">Mild Gain</string>
    <string name="weight_gain">Weight Gain</string>
    <string name="extreme_gain">Extreme Gain</string>
    <string name="enter_details">Enter Details</string>
    <string name="enter_wisely">Enter Wisely</string>
</resources>